--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,7 +11,7 @@ html, body{
     background-color: black;
 }
 body{
-    background: url('../pacote-d013/imagens/fundo-madeira.jpg') no-repeat top center;
+    background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -27,5 +27,12 @@ section#telefone{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background:url('../pacote-d013/imagens/frame-iphone.png') no-repeat;
+    background:url('../imagens/frame-iphone.png') no-repeat;
+}
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 }
