modificação para  redenrizção no celular

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,7 +37,7 @@ iframe#tela{
     height: 471px;
 }
 section#Redes{
-    text-align: right;
+    text-align: left;
 }
 section#Redes img{
     width: 50px;
